--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@botpress/client": "0.5.2",
     "@botpress/sdk": "0.4.8",
+    "@bpinternal/entities": "^0.0.3",
+    "@microsoft/recognizers-text-suite": "^1.3.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
