--- a/packages/dallox/package.json
+++ b/packages/dallox/package.json
@@ -1,6 +1,8 @@
 {
   "name": "dallox",
   "description": "DalloX is a simple framework to build botpress bots as code with dialog features",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "type:check": "tsc --noEmit"
   },
@@ -9,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@botpress/sdk": "0.4.8",
     "zod": "^3.20.6"
   }
 }
