--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -12,6 +12,7 @@
     "@botpress/sdk": "0.4.8",
     "@bpinternal/entities": "^0.0.3",
     "@microsoft/recognizers-text-suite": "^1.3.1",
+    "dallox": "workspace:*",
     "zod": "^3.20.6"
   }
 }
