--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "exactOptionalPropertyTypes": false,
     "resolveJsonModule": true,
     "noPropertyAccessFromIndexSignature": false,
-    "noUnusedLocals": false
+    "noUnusedLocals": false,
+    "noErrorTruncation": true
   }
 }
