--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -11,9 +11,12 @@
     "@botpress/client": "0.5.2",
     "@botpress/sdk": "0.4.8",
     "@bpinternal/entities": "^0.0.4",
+    "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
+    "@microsoft/recognizers-text-number": "^1.3.1",
     "@microsoft/recognizers-text-suite": "^1.3.1",
     "dallox": "workspace:*",
-    "yn": "^5.0.0",
+    "moment": "^2.29.4",
+    "yn": "^3.1.1",
     "zod": "^3.20.6"
   }
 }
