--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gainzmate",
   "scripts": {
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "test": "vitest run"
   },
   "keywords": [],
   "private": true,
@@ -12,11 +13,12 @@
     "@botpress/sdk": "0.4.8",
     "@bpinternal/entities": "^0.0.4",
     "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
-    "@microsoft/recognizers-text-number": "^1.3.1",
-    "@microsoft/recognizers-text-suite": "^1.3.1",
     "dallox": "workspace:*",
     "moment": "^2.29.4",
     "yn": "^3.1.1",
     "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "vitest": "^0.34.6"
   }
 }
