--- a/packages/scat/package.json
+++ b/packages/scat/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "example": "ts-node-dev -T ./examples/index.ts"
   },
   "keywords": [],
   "private": true,
@@ -13,5 +14,10 @@
   "dependencies": {
     "@botpress/sdk": "0.4.8",
     "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
