--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.456.0",
     "@botpress/client": "0.5.2",
     "@botpress/sdk": "0.4.8",
     "@bpinternal/entities": "^0.0.4",
     "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
     "dallox": "workspace:*",
     "moment": "^2.29.4",
+    "scat": "workspace:*",
     "yn": "^3.1.1",
     "zod": "^3.20.6"
   },
