--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -14,6 +14,9 @@
     "@botpress/sdk": "0.4.8",
     "@bpinternal/entities": "^0.0.4",
     "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
+    "@resvg/resvg-wasm": "^2.6.0",
+    "@types/node": "^18.11.18",
+    "axios": "^1.6.2",
     "dallox": "workspace:*",
     "moment": "^2.29.4",
     "scat": "workspace:*",
