--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "gainzville",
   "scripts": {
     "type:check": "pnpm -r --stream type:check",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write .",
+    "format:check": "prettier --version && prettier --check .",
+    "format:fix": "prettier --version && prettier --write .",
     "lint:check": "eslint ./ --ext .ts --ext .tsx",
     "lint:fix": "eslint --fix ./ --ext .ts --ext .tsx",
     "check": "pnpm format:check && pnpm lint:check && pnpm type:check",
-    "fix": "pnpm format:fix && pnpm lint:fix"
+    "fix": "pnpm format:fix && pnpm lint:fix",
+    "test": "vitest --run"
   },
   "keywords": [],
   "private": true,
@@ -16,17 +17,16 @@
   "devDependencies": {
     "@botpress/cli": "^0.4.8",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.6.4",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^5.4.2",
     "vitest": "^0.33.0"
   },
   "packageManager": "pnpm@8.6.0+"
