--- a/packages/gainzmate/tsconfig.json
+++ b/packages/gainzmate/tsconfig.json
@@ -4,5 +4,5 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": [".botpress/**/*", "src/**/*", "./*.ts", "./*.json"]
+  "include": [".botpress/**/*", "src/**/*", "secrets/**/*.ts", "./*.ts", "./*.json"]
 }
