--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -22,6 +22,10 @@ inputs:
     type: string
     required: true
 
+  gsheets_private_key:
+    type: string
+    required: true
+
   digitalocean_space_region:
     type: string
     required: true
@@ -35,10 +39,6 @@ inputs:
     required: true
 
   digitalocean_space_secret_key:
-    type: string
-    required: true
-
-  gsheets_private_key:
     type: string
     required: true
 
@@ -71,9 +71,9 @@ runs:
         TELEGRAM_BOT_TOKEN: ${{ inputs.telegram_bot_token }}
         GSHEETS_SPREADSHEET_ID: ${{ inputs.gsheets_spreadsheet_id }}
         GSHEETS_CLIENT_EMAIL: ${{ inputs.gsheets_client_email }}
-        DIGITALOCEAN_SPACE_REGION: ${{ inputs.gsheets_private_key }}
-        DIGITALOCEAN_SPACE_NAME: ${{ inputs.digitalocean_space_region }}
-        DIGITALOCEAN_SPACE_ACCESS_KEY: ${{ inputs.digitalocean_space_name }}
-        DIGITALOCEAN_SPACE_SECRET_KEY: ${{ inputs.digitalocean_space_access_key }}
-        GSHEETS_PRIVATE_KEY: ${{ inputs.digitalocean_space_secret_key }}
+        GSHEETS_PRIVATE_KEY: ${{ inputs.gsheets_private_key }}
+        DIGITALOCEAN_SPACE_REGION: ${{ inputs.digitalocean_space_region }}
+        DIGITALOCEAN_SPACE_NAME: ${{ inputs.digitalocean_space_name }}
+        DIGITALOCEAN_SPACE_ACCESS_KEY: ${{ inputs.digitalocean_space_access_key }}
+        DIGITALOCEAN_SPACE_SECRET_KEY: ${{ inputs.digitalocean_space_secret_key }}
       run: pnpm gen:secrets
