--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "typescript": "^5.4.2",
     "vitest": "^0.33.0"
   },
-  "packageManager": "pnpm@8.6.0+"
+  "packageManager": "pnpm@8.6.2"
 }
