--- a/packages/dallox/package.json
+++ b/packages/dallox/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@botpress/sdk": "0.4.8",
-    "zod": "^3.20.6"
+    "@botpress/sdk": "^0.10.9"
   }
 }
