--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -4,7 +4,7 @@
     "type:check": "tsc --noEmit",
     "test": "vitest run",
     "add:integrations": "bp add telegram@0.4.5 -y && bp add gsheets@0.3.3 -y",
-    "gen:secrets": "ts-node -T ./secrets './.botpress/secrets.ts'",
+    "gen:secrets": "ts-node -T ./secrets \"./.botpress/secrets.ts\"",
     "build": "pnpm gen:secrets && bp build"
   },
   "keywords": [],
@@ -13,8 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.456.0",
-    "@botpress/client": "0.5.2",
-    "@botpress/sdk": "0.4.8",
+    "@botpress/sdk": "^0.10.9",
     "@bpinternal/entities": "^0.0.4",
     "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
     "@resvg/resvg-wasm": "^2.6.0",
@@ -23,8 +22,7 @@
     "dallox": "workspace:*",
     "moment": "^2.29.4",
     "scat": "workspace:*",
-    "yn": "^3.1.1",
-    "zod": "^3.20.6"
+    "yn": "^3.1.1"
   },
   "devDependencies": {
     "@bpinternal/yargs-extra": "^0.0.5",
