--- a/packages/scat/package.json
+++ b/packages/scat/package.json
@@ -11,13 +11,6 @@
   "private": true,
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "@botpress/sdk": "0.4.8",
-    "zod": "^3.20.6"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "express": "^4.18.2",
-    "ts-node-dev": "^2.0.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
