chore: use botpress builtin files api instead of digitalocean spaces

--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "type:check": "tsc --noEmit",
     "test": "vitest run",
-    "add:integrations": "bp add telegram@0.4.5 -y && bp add gsheets@0.3.3 -y",
+    "add:integrations": "bp add telegram@0.4.5 -y && bp add gsheets@0.3.3 -y && bp add browser@0.0.1",
     "gen:secrets": "ts-node -T ./secrets \"./.botpress/secrets.ts\"",
     "build": "pnpm gen:secrets && bp build"
   },
