--- a/packages/scat/package.json
+++ b/packages/scat/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "author": "",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2"
+  }
 }
