--- a/packages/gainzmate/package.json
+++ b/packages/gainzmate/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "type:check": "tsc --noEmit",
     "test": "vitest run",
-    "add:integrations": "bp add telegram@0.4.5 -y && bp add gsheets@0.3.3 -y && bp add browser@0.0.1",
-    "gen:secrets": "ts-node -T ./secrets \"./.botpress/secrets.ts\"",
+    "add:integrations": "bp add telegram@0.4.5 -y && bp add gsheets@0.3.3 -y && bp add browser@0.0.2 -y",
+    "gen:secrets": "genenv -o ./.genenv/index.ts -e TELEGRAM_BOT_TOKEN -e GSHEETS_SPREADSHEET_ID -e GSHEETS_CLIENT_EMAIL -e GSHEETS_PRIVATE_KEY",
     "build": "pnpm gen:secrets && bp build"
   },
   "keywords": [],
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.456.0",
-    "@botpress/sdk": "^0.10.9",
+    "@botpress/sdk": "1.0.0",
     "@bpinternal/entities": "^0.0.4",
     "@microsoft/recognizers-text-number-with-unit": "^1.3.1",
     "@resvg/resvg-wasm": "^2.6.0",
@@ -25,6 +25,7 @@
     "yn": "^3.1.1"
   },
   "devDependencies": {
+    "@bpinternal/genenv": "^0.0.1",
     "@bpinternal/yargs-extra": "^0.0.5",
     "dotenv": "^16.4.5",
     "vitest": "^0.34.6"
