--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
   "name": "gainzville",
   "scripts": {
     "build": "pnpm -F gainzmate build",
-    "type:check": "pnpm -r --stream type:check",
-    "format:check": "prettier --version && prettier --check .",
-    "format:fix": "prettier --version && prettier --write .",
-    "lint:check": "eslint ./ --ext .ts --ext .tsx",
-    "lint:fix": "eslint --fix ./ --ext .ts --ext .tsx",
-    "check": "pnpm format:check && pnpm lint:check && pnpm type:check",
-    "fix": "pnpm format:fix && pnpm lint:fix",
-    "test": "vitest --run"
+    "start": "pnpm -F gainzmate start",
+    "check:type": "pnpm -r --stream check:type",
+    "check:format": "prettier --version && prettier --check .",
+    "fix:format": "prettier --version && prettier --write .",
+    "check:lint": "eslint ./ --ext .ts --ext .tsx",
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
+    "check": "pnpm check:format && pnpm check:lint && pnpm check:type",
+    "fix": "pnpm fix:format && pnpm fix:lint",
+    "test": "vitest run"
   },
-  "keywords": [],
   "private": true,
-  "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@botpress/cli": "1.0.0",
+    "@botpress/cli": "3.0.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
