--- a/packages/dallox/package.json
+++ b/packages/dallox/package.json
@@ -4,13 +4,14 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "type:check": "tsc --noEmit"
+    "check:type": "tsc --noEmit"
   },
   "keywords": [],
   "private": true,
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@botpress/sdk": "1.0.0"
+    "@botpress/client": "0.41.2",
+    "@botpress/sdk": "3.0.2"
   }
 }
