--- a/packages/scat/package.json
+++ b/packages/scat/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "type:check": "tsc --noEmit",
+    "check:type": "tsc --noEmit",
     "example": "ts-node-dev -T ./examples/index.ts"
   },
   "keywords": [],
